see todo list for update details

--- a/notebooks/main_file_all_regressions.ipynb
+++ b/notebooks/main_file_all_regressions.ipynb
@@ -7,7 +7,10 @@
     "### TODO / Backlog:\n",
     "\n",
     "- Use GridsearchCV to find the optimal number of trees for random-forest regressor.\n",
-    "- Should we consider log of volume and log of moving averages for the plots?\n",
+    "- Use logs for part, or all plots?\n",
+    "- (30/12/19) Usefulness of a dummy variable identifying whether it is a weekday or a weekend?\n",
+    "    - When do we see most volatility? \n",
+    "- (30/12/19) Data cleaning: determine the outlier removal procedure and implement it\n",
     "\n",
     "### Undergoing:\n",
     "\n",
@@ -15,11 +18,13 @@
     "    - (30/12/19) Add dummy variable identifying negative log-returns\n",
     "        - should we scale all features but the dummy variables and intercept, and add them back to each array?\n",
     "            - function of how way it is sampled in the sklearn library, it is unclear how to add back dummy variables in the respective train / test matrices\n",
+    "    - (30/12/19) Document the overleaf with the design matrix\n",
     "- ~~(29/12/19) Shifted the series within the design matrix:~~\n",
     "    - ~~to match the dimensions, had to start from the second observation for predicted variable~~\n",
     "    - ~~need to make sure it makes sense, as now, most regression R² are negative~~\n",
     "    - (30/12/19) reverted the shift - now we have positive R² for linear regression for ZRX token.\n",
-    "    - We need to compute rolling betas rather than using a library, as otherwise it is complicated not to have forward-bias\n",
+    "    - We might need to compute rolling betas rather than using a library, as otherwise it seems complicated not to have forward-bias\n",
+    "\n",
     "\n",
     "### Assumptions undertaken | achieved tasks:\n",
     "\n",
@@ -30,7 +35,7 @@
     "    - (29/12/19) We identify developer variables by an underscore preceding an all capitalized variable name.\n",
     "- (26/12/19) Added the realized volatility according to lecture7 slide 18/28 Advanced derivatives definition i.e.: \n",
     "    - $$\\sigma_R = 100 \\cdot sqrt( \\frac{252}{N_{days}} \\cdot \\sum^{N_{days}}_{i=1} (ln(\\frac{S_i}{S_{i-1}}))^2 ) $$ \n",
-    "    - ~~(26/12/19) yields NaN only, need to figure out why~~ - (29/12/19) figured I used price dataframe instead of data dataframe - now we have values\n",
+    "    - ~~(26/12/19) yields NaN only, need to figure out why~~ - (29/12/19)\n",
     "\n",
     "- Include transactions FROM exchanges to any wallet, merge the two dataframes (TO and FROM exchanges). \n",
     "    - Queried the FROM exchange dataframe with a new SQL query\n",
@@ -52,6 +57,7 @@
     "    \n",
     "- add intercept in design matrix\n",
     "    - (30/12/19) added it back after standard scaling, as the scaling procedure renders it to 0 \n",
+    "- removal of on-chain data if we have missing prices\n",
     "- removal of all transactions with zero 'close' & removal of first two weeks of each trading period  \n",
     "    - Assumption: on-chain transactions prior to quotation are left aside.\n",
     "    - Upsides: allows to remove prices equal to 0 and then remove first two weeks of trading (to avoid possible extreme outliers)\n",
@@ -635,8 +641,8 @@
     "    \n",
     "    '''\n",
     "    The following lines creates an iterator to iterate by pair of y_ | x_\n",
-    "    We would like to run the regression techniques for pairs of y_returns, X_returns, likewise for volume\n",
     "    '''\n",
+    "    \n",
     "    lis = (y_volatility, X_volatility)\n",
     "    it = iter(lis)\n",
     "    \n",
